# polymarket_ai

./: .env.example  .gitignore  CLAUDE.md  README.md  package.json
backend/: .env.example  .gitignore  conftest.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: cd032ddf86b0_initial_schema.py
backend/app/: auth.py  config.py  db.py  main.py
backend/app/adapters/: binance.py  cryptopanic.py  fear_greed.py  openai_client.py  polymarket_clob.py  polymarket_gamma.py  protocols.py  vault_chain.py
backend/app/api/: deps.py
backend/app/domain/: binance.py  markets.py  predictions.py  sentiment.py  stats.py  strategies.py  trades.py
backend/app/models/: __init__.py  base.py  market.py  prediction.py  strategy.py  system_log.py  trade.py  vault_snapshot.py
backend/app/repositories/: market_repository.py  market_repository_sa.py  prediction_repository.py  prediction_repository_sa.py  strategy_repository.py  strategy_repository_sa.py  trade_repository.py  trade_repository_sa.py
backend/app/schemas/: market.py  prediction.py  stats.py  strategy.py  trade.py
backend/app/services/: ai_predictor.py  data_aggregator.py  market_scanner.py  position_monitor.py  strategy_generator.py  trade_executor.py  vault_service.py
backend/app/tasks/: scheduler.py
backend/app/utils/: indicators.py
backend/docker/: Dockerfile  docker-compose.yml
backend/scripts/: find_high_edge_demo.py  seed_demo.py
backend/tests/fakes/: fake_binance.py  fake_market_repository.py  fake_openai.py  fake_polymarket_clob.py  fake_polymarket_gamma.py  fake_sentiment.py  (+4 more)
(+117 files in other folders)
