[project]
name = "polypredict-backend"
version = "0.1.0"
description = "Polymarket AI prediction backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.28.0",
    "apscheduler>=3.11.0",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "ta>=0.11.0",
    "openai>=1.55.0",
    "web3>=7.6.0",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "respx>=0.21.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: tests against real external APIs (skipped by default)",
]
addopts = "-m 'not live' --strict-markers"

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/alembic/*"]
